--- a/index.html
+++ b/index.html
@@ -3,19 +3,35 @@
 	
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="author" content="Wessel Glansbeek">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<title>VIDii 2022/23 - Tijdlijn</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+	<link rel="icon" type="image/svg+xml" href="images/pslogo.png">
+	<link href="https://fonts.cdnfonts.com/css/sst" rel="stylesheet">
+    <style>
+		@import url('https://fonts.cdnfonts.com/css/sst');
+</style>
+		
 </head>
 
 <body>
+
 	<header>
-		<h1>De titel van je tijdlijn</h1>
-		<p>Korte omschrijving van je tijdlijn</p>
+		<ul>
+			<li>
+				<h1>Aantal exemplaren verkocht</h1>
+			</li>
+			<li>
+				<a href=""><img src="images/avatar.png" alt="Avatar gebruiker"><h3>Player 1</h3></a>
+			</li>
+			
+			<li>
+				<h1>Jaartal</h1>
+			</li>
+		</ul>
 	</header>
 
 	<main>
@@ -28,42 +44,37 @@
 		<!-- in elk listitem staat nu een link -->
 		<!-- de link kun je vullen met jouw content -->
 		<!-- of in zijn geheel vervangen door jouw content -->
+		<h2>De PlayStation door de jaren heen</h2>
+	
+
 		<ol>
 			<li>
-				<a href="#">eerste punt in tijd</a>
+				<a href="images/ps5.png"><img src="images/ps5.png" alt="Playstation 5"></a>
+				<h2>PlayStation 5</h2>
 			</li>
 			<li>
-				<a href="#">tweede punt in tijd</a>
+				<a href="images/ps4.jpg"><img src="images/ps4.png" alt="Playstation 4"></a>
+				<h2>PlayStation 4</h2>
 			</li>
 			<li>
-				<a href="#">derde punt in tijd</a>
+				<a href="images/ps3.png"><img src="images/ps3.png" alt="Playstation 3"></a>
+				<h2>PlayStation 3</h2>
 			</li>
 			<li>
-				<a href="#">vierde punt in tijd</a>
+				<a href="images/ps2.png"><img src="images/ps2.png" alt="Playstation 2"></a>
+				<h2>PlayStation 2</h2>
 			</li>
 			<li>
-				<a href="#">vijde punt in tijd</a>
-			</li>
-			<li>
-				<a href="#">zesde punt in tijd</a>
-			</li>
-			<li>
-				<a href="#">zevende punt in tijd</a>
-			</li>
-			<li>
-				<a href="#">achste punt in tijd</a>
-			</li>
-			<li>
-				<a href="#">negende punt in tijd</a>
-			</li>
-			<li>
-				<a href="#">tiende punt in tijd</a>
-			</li>
-			<li>
-				<a href="#">elfde punt in tijd</a>
+				<a href="images/ps1.png"><img src="images/ps1.png" alt="Playstation 1"></a>
+				<h2>PlayStation 1</h2>
 			</li>
 		</ol>
 	</main>
+<footer>
+	<article>
+		<p></p>
+	</article>
+</footer>
 
 	<script src="scripts/script.js"></script>
 </body>
